<resources>
    <string name="app_name">CiicLive</string>

    <string name="login">登录</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="promptAccount">请输入帐号</string>
    <string name="promptPassword">请输入密码</string>
    <string name="memoryPassword">记住密码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="registerNow">没有帐号，立即注册</string>
    <string name="company">企业</string>
    <string name="staff">职员</string>
    <string name="common">普通用户</string>
    <string name="next">下一步</string>
    <string name="goBack">已有帐号，返回登录</string>
    <string name="choose">选择您的注册身份</string>



    <string name="chose_identity">请选择您的身份, 开始体验</string>
    <string name="master">主播</string>
    <string name="audience">观众</string>
    <string name="live_url_hint">请输入直播流地址</string>
    <string name="enter_live">进入直播</string>
    <string name="mode_choose">美图模式选择</string>
    <string name="normal">普通</string>
    <string name="filter">美颜</string>
    <string name="start_live">开始直播</string>
    <string name="whitening">美白</string>
    <string name="night_view">夜景</string>
    <string name="blur">模糊</string>
    <string name="black_white">黑白</string>
    <string name="sunset">黄昏</string>
    <string name="filter_mode">滤镜模式</string>
    <string name="play">播放</string>
    <string name="tip">提示</string>
    <string name="ok">确定</string>
    <string name="living_finished">主播已停止直播，直播结束</string>
    <string name="video_finished">视频播放结束</string>
    <string name="living_error">直播异常</string>
    <string name="not_support_version">当前系统版本不支持滤镜模式，请选择普通模式</string>
    <string name="live_starting">直播已开始</string>
    <string name="net_broken">网络连接已断开</string>
    <string name="live_finished">直播已结束</string>
    <string name="is_not_filter_mode">当前模式不支持滤镜</string>
    <string name="buffering">缓冲中</string>

    <!-- im -->
    <string name="empty"></string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>

    <string name="logining">登录中\u2026</string>
    <string name="register_quickly">快速注册 ></string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">当前网络不可用，请检查您的网络设置</string>
    <string name="i_know">我知道了</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？快速登录 ></string>
    <string name="done">完成</string>
    <string name="latest_message_draft_prefix">[草稿] </string>
    <string name="main_msg_unread_msg_count">[%d条]</string>
    <string name="out_time">超时</string>
    <string name="prepare_data">正在准备数据...</string>

    <!-- 多端登录 -->
    <string name="multiport_manager">多端登录管理</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="multiport_logging">正在使用</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>

    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>

    <string name="online">正在直播</string>

    <string name="send_gift">送了</string>
    <string name="no_gift">当前还没收到礼物</string>

    <string name="input_hint_audience_address">请输入拉流地址</string>
    <string name="input_hint_audience_room">请输入房间号</string>



    <string name="setting_filter">使用滤镜</string>
    <string name="share_tip">直播地址已复制,请到第三方播放器打开,或分享给好友</string>
    <string name="video_share_tip">视频地址已复制, 请到播放器中打开, 或分享给好友</string>
    <string name="share">分享</string>

    <string name="input_panel_guess">猜 拳</string>
</resources>
