<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="611px"
        android:layout_height="wrap_content"
        android:padding="30px"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="26px"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="31px"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/greyHorizontal"
            android:layout_marginTop="30px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/accountText"
            android:textSize="20px"
            android:text="@string/account"
            android:layout_marginTop="27px"/>
        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="match_parent"
            android:layout_height="89px"
            android:layout_marginTop="9px"
            android:background="@drawable/account_bg"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:hint="@string/promptAccount"
            android:textSize="20px"
            android:textColor="@color/accountText"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/accountText"
            android:textSize="20px"
            android:text="@string/password"
            android:layout_marginTop="27px"/>
        <EditText android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="89px"
            android:layout_marginTop="9px"
            android:background="@drawable/account_bg"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:hint="@string/promptPassword"
            android:textSize="20px"
            android:textColor="@color/accountText"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px">
            <CheckBox android:id="@+id/cbox_login_memoryPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memoryPassword"
                android:button="@drawable/checkboxstye"
                android:textSize="20px"
                android:paddingLeft="20px"
                android:textColor="@color/accountText"/>
            <TextView android:id="@+id/tv_login_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20px"
                android:textColor="@color/accountText"
                android:text="@string/forgetPassword"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <Button android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="89px"
            android:text="@string/login"
            android:layout_marginTop="20px"
            android:textColor="@android:color/white"
            android:background="@color/themecolor"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/greyHorizontal"
            android:layout_marginTop="30px"/>
        <TextView android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="50px"
            android:textSize="20px"
            android:textColor="@color/themecolor"
            android:text="@string/registerNow"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14px"/>
    </LinearLayout>
</LinearLayout>